# proyectoFinalTO

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.c63bdd7  README.md  compilar.sh  compile_result.txt  test_compile.sh
docs/: DIAGRAMAS_UML.md  GUIA_ESTADISTICAS.md  GUIA_PRUEBAS.md  RESUMEN_ESTADISTICAS.md
ejemplos/: ejemplo_estadisticas.cpp
include/: AgenteBase.h  Escenario.h  EstadisticasSimulacion.h  FactoriaAgentes.h  ObservadorEvento.h  PathFinder.h  Persona.h  Rescatista.h  Simulador.h  VentanaPrincipal.h  VistaEscenario.h
src/: AgenteBase.cpp  Escenario.cpp  EstadisticasSimulacion.cpp  FactoriaAgentes.cpp  ObservadorEvento.cpp  PathFinder.cpp  Persona.cpp  Rescatista.cpp  Simulador.cpp  VentanaPrincipal.cpp  VistaEscenario.cpp  main.cpp
